--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,9 +11,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Push image to Heroku
-        uses: akhileshns/heroku-deploy
-        heroku_emai: ${{ secrets.HEROKU_EMAIL }}
-        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-        heroku_app_name: welcome-image
-        usedocker: true
-        docker_heroku_proces_type: web
+        uses: akhileshns/heroku-deploy@v3.5.7
+        with:
+          heroku_email: ${{ secrets.HEROKU_EMAIL }}
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_app_name: welcome-image
+          usedocker: true
+          docker_heroku_proces_type: web
